[tool.poetry]
name = "water-cycle"
version = "0.1.0"
description = ""
authors = ["tmleibe2 <tmleibe2@ncsu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PyYAML = "^6.0"
PyInquirer = "^1.0.3"
rich = "^12.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
pylint = "^2.13.2"
pyinstaller = "^4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
water-cycle = "water_cycle.main:main"
